<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">瑜伽</string>
	<string name="timetable">課程表</string>
	<string name="reservation_record">預定記錄</string>
	<string name="about_us">關於我們</string>
	<string name="our_mission_title">我們的使命</string>
	<string name="our_mission">我們深信瑜珈能讓所有人的生活更愉快、健康及均衡。憑藉來自亞洲及北美洲既專業又富熱誠的專業導師團隊，Pure Yoga提供最卓越的課程、設施及環境，冀盼激發所有年齡層和各種體能的大眾，讓瑜珈成為他們生活的壹部分</string>
	<string name="our_expertise_title">我們的專長</string>
	<string name="our_expertise">鬧市中提升體能及洗滌心靈的樂土
Pure Yoga在亞洲各個城市，包括香港、上海、新加坡與臺北的核心地段均設有瑜珈中心。我們同時放眼世界，與美國健身品牌 Equinox合作於紐約開設瑜珈中心。</string>
	<string name="introduce">Pure Yoga致力凝聚亞洲及區外的瑜珈社群。瑜珈中心每週提供各式瑜珈課程超過 1,600節課程。近 200 位獲專業認證的導師從全球各地帶來多元化的經驗。Pure Yoga鼓勵導師接受持續教育，定期舉辦研習講座與內部培訓，例如Maha Kula Gathering；並設獎學金及內部指導老師（mentor）計劃。我們也鼓勵導師持續不斷參與全球各地的研習課程。</string>
	<string name="hint_for_logout">溫馨提示</string>
	<string name="hint_logout">您確定要登出賬號麽？</string>
	<string name="yes">是</string>
	<string name="no">否</string>

	<string name="meun_text_yyxz">語言選擇</string>

	<string name="language_fanti">繁體</string>
	<string name="language_jianti">簡體</string>

	<string name="menu_wdzh">我的帳戶</string>
	<string name="menu_wdls">預訂歷史</string>
	<string name="menu_yyxz">語言選擇</string>
	<string name="menu_lxwm">聯系我們</string>
	<string name="menu_gywm">關於我們</string>
	<string name="menu_zhgl">帳號管理</string>
	<string name="menu_zc">註冊</string>
	<string name="menu_xgmm">修改密碼</string>
	<string name="menu_dc">登出</string>
	<string name="menu_qdl">請登錄</string>

	<string name="data_class1">健康養生</string>
	<string name="data_class2">英語</string>
	<string name="data_class3">陰陽瑜伽</string>
	<string name="data_class4">太極</string>
	<string name="data_class5">社交禮儀</string>

	<string name="data_name1">尹鵬源</string>
	<string name="data_name2">joseph</string>
	<string name="data_name3">simmon</string>
	<string name="data_name4">lili</string>
	<string name="data_name5">陳相鵬</string>

	<string name="reservation_record_kcmc">課程名稱</string>
	<string name="reservation_record_kczt">課程狀態：</string>
	<string name="reservation_time">時間：</string>
	<string name="reservation_jl">教練：</string>
	<string name="reservation_money">課程金額</string>
	<string name="reservation_hit">您確定取消此預定課程？</string>
	<string name="reservation_cancel">已取消</string>

	<string name="reservation_delete">取消預定</string>

	<string name="booking_detail">預定詳情</string>
	<string name="booking_number">預訂編號： 2239 5689 0001</string>
	<string name="booking_hint">溫馨提示：開課請兩小時之內不允許取消預訂課程</string>

	<string name="course_list_all">全部</string>
	<string name="course_list_aomen">澳门</string>
	<string name="course_list_luhuan">路环</string>
	<string name="course_list_sz">凼仔</string>

	<string name="course_introduction">課程介紹</string>
	<string name="course_hint_message">只能預訂兩天之內的課程</string>


	<string name="confirm">確定</string>
	<string name="booking_class">預定課程</string>
	<string name="booking_class_detail">這類特色課程強調身體的平衡與協調性。大多數人的身體多少都有些失衡，而失衡會導致壓力與疲勞。這類課程會幫助學生發現不協調，讓身體更強壯、更柔軟，也更平衡。透過平衡的動作練習，同學可以提升專註力、核心力量，以及穩定性。這類課程可能包含壹些呼吸練習、梵唱，以及冥想。適合稍有瑜伽練習經驗的同學，課程將帶給練習者振奮、愉悅的體驗。這堂課程不會包含完整的倒立練習，但是會教導進入倒立以及程度2動作的準備方式，並為往後的練習打好基礎，使同學穩定成長，日後順利進階到程度2的課程。</string>

	<string name="booking_class_table1">課程：</string>
	<string name="booking_class_table2">時間：</string>
	<string name="booking_class_table3">時長：</string>
	<string name="booking_class_table4">地點：</string>

	<string name="calendar">日歷</string>


	<string name="contact_us_part1_1">氹仔官也店 (Apple Authorized Reseller)</string>
	<string name="contact_us_part1_2">氹仔木鐸街41-43號全幢</string>
	<string name="contact_us_part1_3">營業時間: 6:00am - 10:00pm</string>

	<string name="contact_us_part2_1">高士德店 (Apple Authorized Reseller)</string>
	<string name="contact_us_part2_2">澳門高士德大馬路62-64B號, Macau</string>
	<string name="contact_us_part2_3">營業時間: 6:00am - 10:00pm</string>

	<string name="contact_us_part3_1">南灣店 (Apple Authorized Reseller)</string>
	<string name="contact_us_part3_2">氹仔木鐸街41-43號全幢</string>
	<string name="contact_us_part3_3">營業時間: 6:00am - 10:00pm</string>


	<string name="modify_pwd">修改密碼</string>

	<string name="input_owd">請輸入原密碼</string>
	<string name="input_newpwd">請輸入新密碼</string>
	<string name="input_pwd_agin">請再次輸入新密碼</string>
	<string name="submit">提交</string>

	<string name="make_reservation">我要預訂</string>

	<string name="my_account_data1">賬戶余額：          </string>
	<string name="my_account_data2">剩余上課次數：      </string>
	<string name="my_account_data3">本月消費：          </string>
	<string name="my_account_data4">上月消費：          </string>

	<string name="register">註冊</string>
	<string name="input_phone_number">請填寫手機號碼或郵箱</string>
	<string name="intput_erification_code">輸入驗證碼</string>
	<string name="send_erification_code">重發驗證碼</string>
	<string name="next">下壹步</string>

	<string name="login">登錄</string>
	<string name="input_phone_num">請填寫手機號碼或郵箱</string>
	<string name="input_pwd">輸入密碼</string>
	<string name="forget_pwd">忘記密碼?</string>

	<string name="set_pwd">設置密碼</string>
	<string name="input_pwdagin">請再次輸入密碼</string>
	<string name="register_hint">註冊代表您已經同意本次註冊行為</string>

	<string name="register_success">您已成功註冊應用，請您登錄！</string>
	<string name="progress_load_msg">正在加載&#8230;</string>

	<string name="login_phone_cannot_empty">請輸入手機號碼</string>
	<string name="login_phone_minsize">手機號碼或郵箱不能小於8位!</string>
	<string name="login_area_cannot_empty">區號不能為空</string>

	<string name="logoin_pwd">請正確輸入登錄密碼,長度不少於6位</string>

	<string name="verification_Code">請輸入验证码,長度不少於6位</string>

	<string name="setpwd_error_1">密碼為空</string>
	<string name="setpwd_error_2">密碼長度必須大於等於6</string>
	<string name="setpwd_error_3">	密碼輸入不壹致</string>

	<string name="modify_pwd_empty">原密碼不能為空</string>
	<string name="modify_pwd_less">新密碼長度不能少於6位</string>
	<string name="modify_pwd_diffrent">您輸入的密碼不壹致，請核對後重新輸入</string>
	<string name="modify_pwd_error">原密碼驗證失敗，請重新輸入</string>

	<string name="regesiter_inuput_error">賬戶輸入有誤，請檢查後重新輸入</string>

	<string name="logined">已登錄</string>

	<string name="login_immediately">立即登錄</string>
	<string name="login_to_see">登錄後查看預定記錄</string>

	<string name="login_empty">重試</string>
	<string name="login_empty_data">抱歉，暫無數據</string>
	<string name="login_frozen">該帳戶已凍結，請與管理員聯繫</string>
</resources>
